--- a/appendices/fiber_bundles.tex
+++ b/appendices/fiber_bundles.tex
@@ -219,7 +219,7 @@ Lastly, we will prove that $f^{-1}$ is not continuous using the same machinery. 
 Let $V_n:=[1-\frac{1}{3^n},1]\cap F$. This is both open and compact, so $S(V_n,V_n)$ is a subbasic neighborhood of $1_F$. For every $n\in\mathbb{N}$ we have that $h_n^{-1}(1)=\frac{1}{3^n}<1-\frac{1}{3^n}=\min V_n$, which means that for every $n\in\mathbb{N}$, $h_n^{-1}(V_n)\not\subseteq V_n$, i.e. $h^{-1}_n\not\in S(V_n,V_n)$.
 \end{example}
 
-As we've seen in Theorem~\ref{thm:inverse}, we know some sufficient conditions in order to lift the pathogen of the inverse mapping not being continuous, so we will now prove that the above example wouldn't fail if $F$ was also locally connected in addition to being Hausdorff and locally compact:
+As we've seen in Theorem~\ref{thm:inverse}, we know some sufficient conditions in order to lift the pathology of the inverse mapping not being continuous, so we will now prove that the above example wouldn't fail if $F$ was also locally connected in addition to being Hausdorff and locally compact:
 
 %We will now prove the following theorem, which is based on Theorem~4 in \cite{top_group} which proves the continuity of the inverse operator on $\mathrm{Top}(F,F)$, provided that $F$ has some good properties
 
